--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
-    "@angular/material": "~19.0.4",
+    "@angular/material": "19.0.4",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@material-tailwind/html": "^2.3.2",
     "clsx": "^2.1.1",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^2.5.5",
